--- a/angular.json
+++ b/angular.json
@@ -29,13 +29,13 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css", //<--add this line
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
               "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
-
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" //<--and this line
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
 
           },
@@ -102,14 +102,14 @@
             ],
             "styles": [
               "./node_modules/@popperjs/core/dist/umd/popper.min.js",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css", //<--add this line
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
               "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
-
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
               "./node_modules/@popperjs/core/dist/umd/popper.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" //<--and this line
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
 
           }
