--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.8",
+    "@angular/animations": "^11.2.14",
     "@angular/common": "~11.2.8",
     "@angular/compiler": "~11.2.8",
     "@angular/core": "~11.2.8",
@@ -20,10 +20,12 @@
     "@angular/platform-browser": "~11.2.8",
     "@angular/platform-browser-dynamic": "~11.2.8",
     "@angular/router": "~11.2.8",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
     "ngx-bootstrap": "^7.1.2",
     "ngx-cookie-service": "^11.0.2",
+    "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.7",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
