--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectName=CeibaADN-Carrion-Front(jeison.galeano)
 
 sonar.sourceEncoding=UTF-8
 sonar.sources=src/app/feature
-sonar.exclusions=*/node_modules/**,**/*.spec.ts,**/*.directive.ts,**/*-error.ts,**/*.interceptor.ts,
+sonar.exclusions=*/node_modules/**,**/*.spec.ts,**/*.directive.ts,**/*-error.ts,**/*.interceptor.ts,**/viajes.ts,**/login.ts,**/registrousuario.ts,**/registroconductor.ts
 sonar.tests=src/app/feature/
 sonar.test.inclusions=**/*.spec.ts
 sonar.javascript.lcov.reportPaths=reports/coverage/app-base/lcov.info
